apps/application-boilerplate.konker.dev/backend/deployment/kubernetes/zero-sync-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zero-sync
  labels:
    app.kubernetes.io/name: zero-sync
    app.kubernetes.io/component: sync
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: zero-sync
    app.kubernetes.io/component: sync
  ports:
    - name: http
      protocol: TCP
      port: 4848
      targetPort: http
